docs: :memo: update documentation for all http handlers
